Fixing Sonar warnings related to Java 17
Also ignored several compiler warnings that we can't do anything about.